fixed broken images and changed button colors

--- a/src/index.html
+++ b/src/index.html
@@ -69,7 +69,7 @@
         <img class="img-fluid about-chef" src="../dist/assets/person1.jpg" alt="Chef">
       </div>
       <div class="about-block-img col-6-l none-m block-l">
-        <img class="img-fluid" src="../dist/assets/double-strawbarry.jpg" alt="Dish of food">
+        <img class="img-fluid" src="../src/assets/double-strawbarry.jpg" alt="strawberry yogurt cones">
       </div>
     </div>
   </div>
@@ -87,9 +87,9 @@
           Lorem ipsum dolor sit amet!
         </p>
         <div class="feature-image-group clear">
-          <img class="img-fluid feature-image feature-image-1" src="../dist/assets/milk.jpg" alt="Milk">
-          <img class="img-fluid feature-image feature-image-2" src="../dist/assets/vanilla.jpg" alt="Vanilla">
-          <img class="img-fluid feature-image feature-image-3" src="../dist/assets/chocolate.jpg" alt="Bread">
+          <img class="img-fluid feature-image feature-image-1" src="../src/assets/milk.jpg" alt="Milk">
+          <img class="img-fluid feature-image feature-image-2" src="../src/assets/vanilla.jpg" alt="Vanilla">
+          <img class="img-fluid feature-image feature-image-3" src="../src/assets/chocolate.jpg" alt="Chocolate">
         </div>
       </div>
     </div>
@@ -197,10 +197,10 @@
   <div class="reservations-block-inner container">
     <div class="clear">
       <div class="reservation-block-img col-3-l none block-l">
-        <img class="img-fluid " src="../dist/assets/single-cone2.jpg" alt="Food">
+        <img class="img-fluid " src="../src/assets/single-cone2.jpg" alt="Yoghurt Cone>
       </div>
       <div class="reservation-block-img col-6-m col-3-l none block-m">
-        <img class="img-fluid " src="../dist/assets/single-cone3.jpg" alt="Food">
+        <img class="img-fluid " src="../src/assets/single-cone3.jpg" alt="Another Yogurt Cone">
       </div>
       <div class="reservation-block-form col-6-m">
         <div class="text-center">
@@ -224,14 +224,14 @@
               </div>
             </div>
             <div class="clear">
-              <div class="col-6-m pad-top-10 pad-bottom-10">
+              <div class=" centered col-12-m pad-top-10 pad-bottom-10">
                 <label class="block strong" for="order">Order</label>
                
-                <textarea name="order" class="form-control" id="order" placeholder="Order" rows="2"></textarea>
+                <textarea name="order" class="field form-control" id="order" placeholder="Order" rows="2"></textarea>
               </div>
             </div>
             <div class="text-center">
-              <input type="submit" class="button reservations-submit" value="Book now!">
+              <input type="submit" class="button button-secondary color-change" value="Book now!">
             </div>
           </fieldset>
         </form>
