--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,7 @@
     <h1 class="banner-lead">
       <span class="banner-lead-1">Welcome!</span>
       <span class="banner-lead-2">Everything is</span>
-      <span class="banner-lead-3">Yoghurt<span>
+      <span class="banner-lead-3">Yogurt<span>
     </h1>
     <div class="banner-buttons">
       <a href="#menu" class="button button-secondary">See the menu</a>
@@ -66,7 +66,7 @@
         <p>
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam explicabo, expedita numquam ut dolorem eveniet esse animi voluptatibus repellat ea, quidem, temporibus at dolorum. Quis quas neque maxime dolore in?
         </p>
-        <img class="img-fluid about-chef" src="../dist/assets/person1.jpg" alt="Chef">
+        <img class="img-fluid about-chef" src="../src/assets/person1.jpg" alt="Chef">
       </div>
       <div class="about-block-img col-6-l none-m block-l">
         <img class="img-fluid" src="../src/assets/double-strawbarry.jpg" alt="strawberry yogurt cones">
@@ -207,7 +207,7 @@
           <h2 class="heading">The Good Place</h2>
           <p>
            Order Ahead! 
-           <br/>We'll Be here waiting on you!
+           <br/>We'll Be Here Waiting On You!
           </p>
         </div>
         <form class="reservations-form">
