fixed broken image links

--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
         <p>
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam explicabo, expedita numquam ut dolorem eveniet esse animi voluptatibus repellat ea, quidem, temporibus at dolorum. Quis quas neque maxime dolore in?
         </p>
-        <img class="img-fluid about-chef" src="../src/assets/person1.jpg" alt="Chef">
+        <img class="img-fluid about-chef" src="./assets/person1.jpg" alt="Chef">
       </div>
       <div class="about-block-img col-6-l none-m block-l">
-        <img class="img-fluid" src="../src/assets/double-strawbarry.jpg" alt="strawberry yogurt cones">
+        <img class="img-fluid" src="./assets/double-strawbarry.jpg" alt="strawberry yogurt cones">
       </div>
     </div>
   </div>
@@ -87,9 +87,9 @@
           Lorem ipsum dolor sit amet!
         </p>
         <div class="feature-image-group clear">
-          <img class="img-fluid feature-image feature-image-1" src="../src/assets/milk.jpg" alt="Milk">
-          <img class="img-fluid feature-image feature-image-2" src="../src/assets/vanilla.jpg" alt="Vanilla">
-          <img class="img-fluid feature-image feature-image-3" src="../src/assets/chocolate.jpg" alt="Chocolate">
+          <img class="img-fluid feature-image feature-image-1" src="./assets/milk.jpg" alt="Milk">
+          <img class="img-fluid feature-image feature-image-2" src="./assets/vanilla.jpg" alt="Vanilla">
+          <img class="img-fluid feature-image feature-image-3" src="./assets/chocolate.jpg" alt="Chocolate">
         </div>
       </div>
     </div>
@@ -197,10 +197,10 @@
   <div class="reservations-block-inner container">
     <div class="clear">
       <div class="reservation-block-img col-3-l none block-l">
-        <img class="img-fluid " src="../src/assets/single-cone2.jpg" alt="Yoghurt Cone>
+        <img class="img-fluid " src="./assets/single-cone2.jpg" alt="Yoghurt Cone>
       </div>
       <div class="reservation-block-img col-6-m col-3-l none block-m">
-        <img class="img-fluid " src="../src/assets/single-cone3.jpg" alt="Another Yogurt Cone">
+        <img class="img-fluid " src="./assets/single-cone3.jpg" alt="Another Yogurt Cone">
       </div>
       <div class="reservation-block-form col-6-m">
         <div class="text-center">
