fixed broken image links

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
   <div class="reservations-block-inner container">
     <div class="clear">
       <div class="reservation-block-img col-3-l none block-l">
-        <img class="img-fluid " src="./assets/single-cone2.jpg" alt="Yoghurt Cone>
+        <img class="img-fluid " src="./assets/single-cone2.jpg" alt="Yoghurt Cone">
       </div>
       <div class="reservation-block-img col-6-m col-3-l none block-m">
         <img class="img-fluid " src="./assets/single-cone3.jpg" alt="Another Yogurt Cone">
