--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <div class="about-block-content col-6-l">
         <h2 class="heading">Happiness in a cone</h2>
         <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam explicabo, expedita numquam ut dolorem eveniet esse animi voluptatibus repellat ea, quidem, temporibus at dolorum. Quis quas neque maxime dolore in?
+          Delicious scoops and swirls of Frozen Yogurt <br> topped with your choice of fruits, nuts, or candy.
         </p>
         <img class="img-fluid about-chef" src="./assets/person1.jpg" alt="Chef">
       </div>
@@ -78,13 +78,11 @@
 <div id="ingredients" class="content-block ingredients-block">
   <div class="ingredients-block-inner container clear">
     <div class="feature-box text-center col-6-l right-m">
-      <h2 class="heading-secondary">Fine ingredients</h2>
+      <h2 class="heading-secondary">Fine Ingredients</h2>
       <div class="feature-box-content">
         <p>
-         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Expedita, sunt. <br>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Placeat, blanditiis.
-          <br>
-          Lorem ipsum dolor sit amet!
+         Our yogurt is made with only the highest quality <br>
+          Almond Milk  &nbsp Vanilla &nbsp & &nbsp Chocolate
         </p>
         <div class="feature-image-group clear">
           <img class="img-fluid feature-image feature-image-1" src="./assets/milk.jpg" alt="Milk">
@@ -181,10 +179,10 @@
       <h2 class="heading-secondary">Guest Reviews</h2>
       <blockquote class="pad-30">
         <p>
-         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero corrupti possimus soluta optio cumque fugit repellat vitae earum, tempore laboriosam accusamus eius maiores dignissimos. Saepe!
+        Frozen yogurt is my kids go to celebration treat. The shop is clean and the staff is always friendly. <br/>We love The Good Place!  
         </p>
         <cite>
-          Micheal, New York
+          Micheal G.
         </cite>
       </blockquote>
     </div>
@@ -231,7 +229,7 @@
               </div>
             </div>
             <div class="text-center">
-              <input type="submit" class="button button-secondary color-change" value="Book now!">
+              <input type="submit" class="button button-secondary color-change" value="Place Order!">
             </div>
           </fieldset>
         </form>
@@ -248,14 +246,14 @@
       <div class="footer-column col-4-l">
         <h3 class="footer-heading">About us</h3>
         <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde quae adipisci fugiat ducimus sit illum vero! Ducimus ex porro vero consequatur mollitia fugit magnam!
+          Est. in 2001, The Good Place is nestled in the heart of Universal Square. We are the perfect spot for a tasty midday snack or after dinner treat!
         </p>
       </div>
       <div class="footer-column col-4-l">
         <h3 class="footer-heading">Opening Hours</h3>
         <p>
-          <strong>Mon-Thu:</strong> 7.00am - 8.00pm <br>
-          <strong>Fri-Sun:</strong> 7.00am - 10.00pm
+          <strong>Mon-Thu:</strong> 12.00pm - 10.00pm <br>
+          <strong>Fri-Sun:</strong> 11.00pm - 10.00pm
         </p>
         <ul class="payment-types icon-list-inline">
           <li><span class="payment payment-mastercard"><span class="sr">Mastercard</span></a></li>
